refactor(ageratum): 重构模组注册系统并简化代码结构
- 将原有的DeferredRegister替换为Registrum注册系统
- 移除不再使用的物品和创造模式标签相关代码
- 更新客户端重载监听器注册方式
- 简化命令注册流程并移除物品相关的命令功能
- 优化资源管理器访问方式
- 调整键位映射分类和注册逻辑
- 更新顶点消费者接口实现
- 修复物品绑定功能的配置访问问题
- 优化内置行内组件的物品引用逻辑
- 简化文档缓存和预加载机制
- 移除过时的语言文件生成器
- 调整数据生成器初始化方式