@@ -1,28 +1,34 @@
 package dev.anvilcraft.resource.ageratum.client.feat.markdown.component.extend;
 
-import com.mojang.blaze3d.platform.Lighting;
-import com.mojang.blaze3d.systems.RenderSystem;
 import com.mojang.brigadier.StringReader;
+import dev.anvilcraft.lib.v2.font.AnvilLibFont;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.MDExtensionContext;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.MDRenderContext;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.component.MDComponent;
 import dev.anvilcraft.resource.ageratum.client.feat.markdown.component.MDTextComponent;
 import dev.anvilcraft.resource.ageratum.client.util.level.SandboxRenderLevel;
+import lombok.extern.slf4j.Slf4j;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphicsExtractor;
-import net.minecraft.client.renderer.entity.EntityRenderDispatcher;
+import net.minecraft.client.renderer.entity.state.EntityRenderState;
 import net.minecraft.core.Holder;
-import net.minecraft.core.HolderLookup;
+import net.minecraft.core.Registry;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.NbtOps;
+import net.minecraft.nbt.Tag;
 import net.minecraft.nbt.TagParser;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.Identifier;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.util.ProblemReporter;
 import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.level.storage.TagValueInput;
+import org.joml.Matrix3x2fStack;
 import org.joml.Quaternionf;
 import org.joml.Vector2f;
 import org.joml.Vector3f;
@@ -33,6 +39,7 @@ import javax.annotation.Nullable;
 /**
  * 实体展示组件，使用背包界面同款实体预览渲染。
  */
+@Slf4j
 public final class MDEntityComponent extends MDComponent {
     private final Identifier entityId;
     private final CompoundTag entityNbt;
@@ -55,7 +62,7 @@ public final class MDEntityComponent extends MDComponent {
 
         Entity entity = this.getEntity();
         if (entity == null) {
-            super.render(context);
+            super.extractRenderState(context);
             return;
         }
 
@@ -68,25 +75,24 @@ public final class MDEntityComponent extends MDComponent {
         int y2 = contentHeight - 4;
 
         graphics.fill(drawX, 0, drawX + contentWidth, contentHeight, 0x22000000);
-        graphics.renderOutline(drawX, 0, contentWidth, contentHeight, 0x66000000);
+        graphics.outline(drawX, 0, contentWidth, contentHeight, 0x66000000);
 
         if (this.showText) {
             Component hoverName = entity.getType().getDescription();
             int nameWidth = minecraft.font.width(hoverName);
-            graphics.text(minecraft.font, hoverName, drawX + contentWidth / 2 - nameWidth / 2, contentHeight + 2, 0x000000, false);
+            graphics.anvillib$text(AnvilLibFont.getSelectFont(), hoverName, drawX + contentWidth / 2 - nameWidth / 2, contentHeight + 2, 0x000000, false);
         }
 
-        context.enableScissor(drawX + 1, 1, drawX + contentWidth - 1, contentHeight - 1);
-        PoseStack pose = graphics.pose();
+//        context.enableScissor(drawX + 1, 1, drawX + contentWidth - 1, contentHeight - 1);
+        Matrix3x2fStack pose = graphics.pose();
         pose.pushMatrix();
         MDEntityComponent.renderEntity(context, graphics, x1, y1, x2, y2, this.getScale(entity, context.scale()), entity);
         pose.popMatrix();
-        context.disableScissor();
+//        context.disableScissor();
     }
 
-    @SuppressWarnings("MathClampMigration")
     private int getContentWidth(int maxX) {
-        return Math.min(Math.max(Math.round(this.entityBbSize.x), 64), maxX);
+        return Math.clamp(Math.round(this.entityBbSize.x), 64, maxX);
     }
 
     private int getContentHeight() {
@@ -146,6 +152,19 @@ public final class MDEntityComponent extends MDComponent {
             living.yHeadRotO = living.getYRot();
         }
         Vector3f translate = new Vector3f(0.0F, entity.getBbHeight() / 2.0F, entity.getBbWidth() / -2.0F);
+        EntityRenderState entityRenderState = context.minecraft().getEntityRenderDispatcher().extractEntity(entity, 0);
+        graphics.entity(
+            entityRenderState,
+            scale,
+            translate,
+            pose,
+            new Quaternionf(),
+            (int) centerX,
+            context.offsetY(),
+            (int) (200 + centerX),
+            200 + context.offsetY()
+        );
+        /*TODO
         MDEntityComponent.renderEntity(
             graphics,
             centerX,
@@ -156,6 +175,7 @@ public final class MDEntityComponent extends MDComponent {
             cameraOrientation,
             entity
         );
+        */
         entity.setYRot(yRot);
         entity.setXRot(xRot);
         if (entity instanceof LivingEntity living) {
@@ -165,21 +185,23 @@ public final class MDEntityComponent extends MDComponent {
         }
     }
 
+    /*TODO
     private static void renderEntity(
-        GuiGraphicsExtractor GuiGraphicsExtractor,
+        GuiGraphicsExtractor guiGraphics,
         float x,
         float y,
         float scale,
         Vector3f translate,
-        Quaternionf pose,
+        Matrix3x2fc pose,
         @Nullable Quaternionf cameraOrientation,
         Entity entity
     ) {
-        GuiGraphicsExtractor.pose().pushMatrix();
-        GuiGraphicsExtractor.pose().translate(x, y, 50.0);
-        GuiGraphicsExtractor.pose().scale(scale, scale, -scale);
-        GuiGraphicsExtractor.pose().translate(translate.x, translate.y, translate.z);
-        GuiGraphicsExtractor.pose().mulPose(pose);
+        Matrix3x2fStack poseStack = guiGraphics.pose();
+        poseStack.pushMatrix();
+        poseStack.translate(x, y);
+        poseStack.scale(scale, scale);
+        poseStack.translate(translate.x, translate.y);
+        poseStack.mul(pose);
         Lighting.setupForEntityInInventory();
         EntityRenderDispatcher entityrenderdispatcher = Minecraft.getInstance().getEntityRenderDispatcher();
         if (cameraOrientation != null) {
@@ -195,15 +217,16 @@ public final class MDEntityComponent extends MDComponent {
             0.0,
             0.0F,
             1.0F,
-            GuiGraphicsExtractor.pose(),
-            GuiGraphicsExtractor.bufferSource(),
+            poseStack,
+            guiGraphics.bufferSource(),
             15728880
         ));
-        GuiGraphicsExtractor.flush();
+        guiGraphics.flush();
         entityrenderdispatcher.setRenderShadow(true);
-        GuiGraphicsExtractor.pose().popMatrix();
+        poseStack.popMatrix();
         Lighting.setupFor3DItems();
     }
+    */
 
     private @Nullable Entity getEntity() {
         if (this.cachedEntity != null && this.cachedLevel != null) {
@@ -213,20 +236,23 @@ public final class MDEntityComponent extends MDComponent {
         if (Minecraft.getInstance().level == null) return null;
         SandboxRenderLevel level = new SandboxRenderLevel();
 
-        Optional<HolderLookup.RegistryLookup<EntityType<?>>> lookup = level.registryAccess().lookup(Registries.ENTITY_TYPE);
+        Optional<Registry<EntityType<?>>> lookup = level.registryAccess().lookup(Registries.ENTITY_TYPE);
         if (lookup.isEmpty()) {
             return null;
         }
 
-        Optional<Holder.Reference<EntityType<?>>> entityTypeRef = lookup.get().get(
-            ResourceKey.create(Registries.ENTITY_TYPE, this.entityId));
+        Optional<Holder.Reference<EntityType<?>>> entityTypeRef = lookup.get()
+            .get(ResourceKey.create(Registries.ENTITY_TYPE, this.entityId));
         if (entityTypeRef.isEmpty()) {
             return null;
         }
 
-        Entity entity = entityTypeRef.get().value().create(level);
+        Entity entity = entityTypeRef.get().value().create(level, EntitySpawnReason.LOAD);
         if (entity == null) return null;
-        entity.load(this.entityNbt);
+
+        try (ProblemReporter.ScopedCollector reporter = new ProblemReporter.ScopedCollector(entity.problemPath(), log)) {
+            entity.load(TagValueInput.create(reporter, entity.registryAccess(), this.entityNbt));
+        }
 
         this.cachedLevel = level;
         this.cachedEntity = entity;
@@ -250,7 +276,8 @@ public final class MDEntityComponent extends MDComponent {
         CompoundTag nbt = new CompoundTag();
         String rawNbt = context.params().get("nbt");
         try {
-            nbt = new TagParser(new StringReader(rawNbt)).readStruct();
+            Tag tag = TagParser.create(NbtOps.INSTANCE).parseAsArgument(new StringReader(rawNbt));
+            if (tag instanceof CompoundTag compoundTag) nbt = compoundTag;
         } catch (Exception ignore) {
         }
 
